--- a/snippets/package.json
+++ b/snippets/package.json
@@ -13,6 +13,10 @@
 			{
 				"language": "cpp",
 				"path": "./cpp.json"
+			},
+			{
+				"language": "vue",
+				"path": "./vue.json"
 			}
 		]
 	}
